--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/test.js --timeout 999999999"
+    "test": "mocha test/*.js --timeout 999999999"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "standard": "^11.0.1"
   },
   "dependencies": {
-    "bitcoinjs-lib": "3.3.2"
+    "bitcoinjs-lib": "3.3.2",
+    "request": "^2.87.0"
   }
 }
