--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha test/*.js --timeout 999999999"
+    "test": "mocha test/*.js --timeout 999999999 --bail"
   },
   "repository": {
     "type": "git",
